@@ -214,11 +214,6 @@ def number_equations(app, doctree, docname):
         node[0] = nodes.Text(num, num)
 
 
-def setup_amsfont(app):
-    # use amsfonts if users do not configure latex_elements['amsfonts']
-    app.config.latex_elements.setdefault('amsfonts', r'\usepackage{amsfonts}')
-
-
 def setup_math(app, htmlinlinevisitors, htmldisplayvisitors):
     app.add_config_value('math_number_all', False, 'html')
     app.add_node(math, override=True,
@@ -243,4 +238,3 @@ def setup_math(app, htmlinlinevisitors, htmldisplayvisitors):
     app.add_role('eq', eq_role)
     app.add_directive('math', MathDirective)
     app.connect('doctree-resolved', number_equations)
-    app.connect('builder-inited', setup_amsfont)
