@@ -14,8 +14,6 @@
 \RequirePackage{fancybox}
 \RequirePackage{titlesec}
 \RequirePackage{tabulary}
-\RequirePackage{amsmath} % for \text
-\RequirePackage{amssymb} % for some symbols
 \RequirePackage{makeidx}
 \RequirePackage{framed}
 \RequirePackage{ifthen}
