@@ -39,7 +39,7 @@ HEADER = r'''%% Generated by Sphinx.
 %(utf8extra)s
 %(cmappkg)s
 %(fontenc)s
-%(amsfonts)s
+%(amsmath)s
 %(babel)s
 %(fontpkg)s
 %(fncychap)s
@@ -279,7 +279,7 @@ class LaTeXTranslator(nodes.NodeVisitor):
                             '\\else\\fi'),
         'cmappkg':         '\\usepackage{cmap}',
         'fontenc':         '\\usepackage[T1]{fontenc}',
-        'amsfonts':        '',
+        'amsmath':         '\\usepackage{amsmath,amssymb}',
         'babel':           '\\usepackage{babel}',
         'fontpkg':         '\\usepackage{times}',
         'fncychap':        '\\usepackage[Bjarne]{fncychap}',
